# sargon

./: .envrc  .gitignore  .phylum_project  .pre-commit-config.yaml  .swift-format  .swiftformat  .tarpaulin.toml  BuildProcess.md  Cargo.toml  Package.resolved  Package.swift  README.md  SPLIT.md  _typos.toml  build.rs  codecov.yml  factor_instances.rs  factor_source_ids.rs  factor_sources.rs  makefile  rust-toolchain.toml  rustc-ice-2024-12-17T15_45_54-6125.txt  rustc-ice-2024-12-17T15_46_27-6146.txt  rustc-ice-2024-12-17T15_46_47-6151.txt  rustc-ice-2024-12-17T15_47_00-6158.txt  uniffi.toml
crates/bindgen/: Cargo.toml
crates/bindgen/src/: main.rs  post_process_kotlin.rs
crates/core/: Cargo.toml  build.rs  uniffi.toml
crates/core/assert-json/: Cargo.toml
crates/core/assert-json/src/: lib.rs
crates/core/collections/: Cargo.toml
crates/core/collections/src/: appendable_collection.rs  lib.rs
crates/core/error/: Cargo.toml
crates/core/error/src/: common_error.rs  lib.rs  secure_storage_access_error_kind.rs
crates/core/has-sample-values/: Cargo.toml
crates/core/has-sample-values/src/: has_indexed_sample_values.rs  has_many_sample_values.rs  has_sample_values.rs  (+1 more)
crates/core/misc/: Cargo.toml
crates/core/prelude/: Cargo.toml
crates/core/src/: core.udl  lib.rs
crates/core/time-utils/: Cargo.toml
crates/core/utils/: Cargo.toml
crates/drivers/: Cargo.toml  build.rs  uniffi.toml
crates/drivers/src/: drivers.udl  lib.rs
crates/ecdsa/: Cargo.toml  build.rs  uniffi.toml
crates/ecdsa/src/: drivers.udl  lib.rs
crates/gateway-client-and-api/: Cargo.toml
crates/gateway-client-and-api/src/: lib.rs
crates/gateway-logic/: Cargo.toml  build.rs
crates/gateway-logic/src/: lib.rs
crates/gateway-models/: Cargo.toml
crates/gateway-models/src/: lib.rs
crates/gateway_api/: Cargo.toml  build.rs  uniffi.toml
crates/gateway_api/src/: lib.rs
crates/gateway_models/: Cargo.toml  build.rs  uniffi.toml
crates/gateway_models/src/: gateway_models.udl  lib.rs
crates/hierarchical_deterministic/: Cargo.toml  build.rs  uniffi.toml
crates/hierarchical_deterministic/src/: hd.udl  lib.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: http_client.rs  lib.rs
crates/identified-vec-of/: Cargo.toml
crates/identified-vec-of/src/: decl_identified_vec_of_with_samples.rs  identified_vec_of.rs  identified_vec_of_display_debug.rs  identified_vec_of_iterator.rs  identified_vec_of_modify.rs  identified_vec_of_query.rs  identified_vec_of_validation_import_export.rs  lib.rs
crates/next-derivation-index-ephemeral/: Cargo.toml
crates/next-derivation-index-ephemeral/src/: lib.rs
crates/profile/: Cargo.toml  build.rs  uniffi.toml
crates/profile/src/: lib.rs  profile.udl
crates/radix-name-service/: Cargo.toml
crates/radix-name-service/src/: lib.rs  service.rs
crates/radix_connect/: Cargo.toml  build.rs  uniffi.toml
crates/radix_connect/src/: interaction_id.rs  lib.rs  modules.rs  radix_connect.udl  wallet_account.rs
crates/ret/: Cargo.toml  build.rs  uniffi.toml
crates/ret/src/: lib.rs  ret.udl
crates/sargon-addresses/: Cargo.toml
crates/sargon-addresses/src/: lib.rs
crates/sargon-bytes/: Cargo.toml
crates/sargon-bytes/src/: exactly_n_bytes.rs  lib.rs
crates/sargon-clients/: Cargo.toml
crates/sargon-clients/src/: lib.rs
crates/sargon-core-assert-json/: Cargo.toml
crates/sargon-core-collections/: Cargo.toml
crates/sargon-core-entity/: Cargo.toml
crates/sargon-core-host-info/: Cargo.toml
crates/sargon-core-metadata/: Cargo.toml
hiearchal_deterministic/: Cargo.toml
hiearchal_deterministic/src/: derivation_path.rs  lib.rs
hiearchal_deterministic/src/bip32/: hd_path.rs  hd_path_component.rs  mod.rs
hiearchal_deterministic/src/bip44/: bip44.rs  mod.rs
hiearchal_deterministic/src/cap26/: account_path.rs  cap26.rs  cap26_entity_kind.rs  cap26_error.rs  cap26_key_kind.rs  cap26_path.rs  mod.rs
hierarchical_deterministic/: Cargo.toml
hierarchical_deterministic/src/: derivation_path.rs  hdpath_error.rs  lib.rs
hierarchical_deterministic/src/bip32/: hd_path.rs  hd_path_component.rs  mod.rs
hierarchical_deterministic/src/bip39/: bip39_word_count.rs  mnemonic.rs  mnemonic_with_passphrase.rs  mod.rs
hierarchical_deterministic/src/bip44/: bip44.rs  bip44_like_path.rs  mod.rs
hierarchical_deterministic/src/cap26/: account_path.rs  cap26.rs  cap26_entity_kind.rs  cap26_error.rs  cap26_key_kind.rs  cap26_repr.rs  mod.rs  simple_network_id.rs
hierarchical_deterministic/src/derivation/: derivation.rs  derivation_path.rs  derivation_path_scheme.rs  hierarchical_deterministic_private_key.rs  hierarchical_deterministic_public_key.rs  mnemonic_with_passphrase.rs  mod.rs  slip10_curve.rs
hierarchical_deterministic/src/keys/: key_extensions.rs  mod.rs
hierarchical_deterministic/tests/: slip10_vectors_test.rs
profile/: Cargo.toml  build.rs  uniffi.toml
profile/src/: error.rs  identified_vec_via.rs  lib.rs  profileFFI.udl  profilesnapshot_version.rs  radix_wallet_kit.udl  wallet.rs
profile/src/logic/: mod.rs  profile_next_derivation.rs
profile/src/utils/: factory.rs  mod.rs  string_utils.rs
profile/src/v100/: mod.rs  profile.rs
profile/src/wallet/: mod.rs  wallet.rs  wallet_accounts.rs  wallet_profile_io.rs
profile/src/wallet_kit_common/: assert_json.rs  id_generator.rs  mod.rs  unsafe_id_stepper.rs
profile/tests/: slip10_vectors_test.rs  test_generated_bindings.rs  tests.rs
profile/tests/bindings/: test_account_address.swift  test_app_preferences.swift  test_factor_sources.swift  test_gateways.swift  test_header.swift  test_keys.swift  test_profile.swift  test_resource_address.swift  test_wallet.swift
profile/tests/uniffi/: main.rs
profile/tests/vectors/: main.rs  only_plaintext_profile_snapshot_version_100.json
wallet_kit_common/: Cargo.toml
wallet_kit_common/src/: error.rs  has_placeholder.rs  json.rs  lib.rs  network_id.rs  secure_random_bytes.rs
wallet_kit_common/src/error/: common_error.rs  mod.rs
wallet_kit_common/src/types/: hex_32bytes.rs  mod.rs
wallet_kit_common/src/utils/: factory.rs
(+7610 files in other folders)
