[workspace]
resolver = "2"
members = [
    "crates/sargon",
    "crates/sargon-core",
    "crates/sargon-hierarchical-deterministic",
    "crates/sargon-factors",
    "crates/sargon-uniffi",
    "crates/sargon-uniffi-conversion-macros",
]

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]

# ===== RADIX DEPENDENCIES ========
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0", features = [
    "serde",
    "secp256k1_sign_and_validate",
] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0", features = [
    "serde",
] }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }


# ===== EXTERNAL DEPENDENCIES ========
# hkdf = "0.12.4"
hkdf = { git = "https://github.com/RustCrypto/KDFs/", rev = "1ac16e8b9d4ee7a67613c9396c6cc1327652eaba" }
# thiserror = "1.0.50"
thiserror = { git = "https://github.com/dtolnay/thiserror/", rev = "a7d220d7915fb888413aa7978efd70f7006bda9d" }
# assert-json-diff = "2.0.2"
assert-json-diff = { git = "https://github.com/davidpdrsn/assert-json-diff/", rev = "bca0d2c590808274298d939e0533da79cd09076d" }

# derive_more = "1.0.0"
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "d7f5b9e94d024790682f6fc4dcca13941cce64c8", features = [
    "add",
    "as_ref",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "mul",
] }

# enum-as-inner = "0.6.0"
enum-as-inner = { git = "https://github.com/bluejekyll/enum-as-inner/", rev = "c15f6e5c4f98ec865e181ae1fff9fc13a1a2e4e2" }

# enum-iterator = "1.4.1"
enum-iterator = { git = "https://github.com/stephaneyfx/enum-iterator/", rev = "9d472a1237cfd03b1c7657fdcba74c8070bfb4ea" }


# delegate = "0.12.0"
delegate = { git = "https://github.com/Kobzol/rust-delegate/", rev = "ac852be64f3e4b5f9b58be910d09921488d2845d" }

# hex = "0.4.3"
hex = { git = "https://github.com/KokaKiwi/rust-hex/", rev = "b2b4370b5bf021b98ee7adc92233e8de3f2de792" }


# SLIP10 implementation
# iota_crypto = "0.23.2"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "8c13125541e762206e2dc57b8bfde89c7f6ce8e3", features = [
    "slip10",
    "ed25519",
    "secp256k1",
    "x25519",
] }
# Transitive dependency of iota_crypto - used to construct PubKey from uncompressed bytes.
# k256 = "0.13.3"
k256 = { git = "https://github.com/RustCrypto/elliptic-curves", rev = "e158ce5cf0e9acee2fd76aff2a628334f5c771e5" }

log = "0.4.20"


# rand = "0.8.5"
rand = { git = "https://github.com/rust-random/rand/", rev = "937320cbfeebd4352a23086d9c6e68f067f74644" }


# serde_with = "3.4.0"
serde_with = { git = "https://github.com/jonasbb/serde_with/", rev = "1e8e4e75398c6a9de29386473ae7c3157be031c2" }


# paste = "1.0.14"
paste = { git = "https://github.com/dtolnay/paste", rev = "1e0cc1025af5388397c67fa4389ad7ad24814df8" }

# pretty_assertions = "1.4.0"
pretty_assertions = { git = "https://github.com/rust-pretty-assertions/rust-pretty-assertions", rev = "3f1ebc0cac5f88e875f036bf16636e15fa935c8d" }
serde = { version = "1.0.193", features = ["derive", "rc", "std"] }

# serde_json = "1.0.108"
serde_json = { git = "https://github.com/serde-rs/json/", rev = "4bc1eaa03a6160593575bc9bc60c94dba4cab1e3", features = [
    "preserve_order",
] }


# serde_repr = "0.1.17"
serde_repr = { git = "https://github.com/dtolnay/serde-repr/", rev = "94cce18a51bc169869f2cdcea6549b3ed81b3b2e" }

# iso8601-timestamp = "0.2.16"
iso8601-timestamp = { git = "https://github.com/Lantern-chat/iso8601-timestamp/", rev = "e5a3f2a5911759bc6b0d8100b032a6b4dd6e12c1", features = [
    "serde",
    "std",
] }
# itertools = "0.12.0"
itertools = { git = "https://github.com/rust-itertools/itertools/", rev = "98ecabb47d7147dae06fc3fa400ec758947194f3" }

# once_cell = "1.19.0"
once_cell = { git = "https://github.com/matklad/once_cell/", rev = "c48d3c2c01de926228aea2ac1d03672b4ce160c1" }


# strum = "0.26.1"
strum = { git = "https://github.com/Peternator7/strum/", rev = "f746c3699acf150112e26c00e6c8ca666d8d068d", features = [
    "derive",
] }
url = { version = "2.5.0", features = ["serde"] }

# uuid = "1.6.1"
uuid = { git = "https://github.com/uuid-rs/uuid/", rev = "c8891073248ddc7faa8c53ac9ceb629a341c7b9b", features = [
    "v4",
    "serde",
] }

# zeroize = "1.7.0"
zeroize = { git = "https://github.com/RustCrypto/utils", rev = "df6d2f48a5e8afe8eef04ba32e2af55bacb41375", features = [
    "zeroize_derive",
    "derive",
] }
