[workspace]
resolver = "2"
members = [
    # === FOR APP ===
    "crates/app/home-cards",
    "crates/app/radix-connect",
    "crates/app/radix-connect-models",
    "crates/app/security-center",
    "crates/app/signing",
    "crates/app/signing-traits",
    "crates/app/key-derivation-traits",

    # === COMMON ===
    "crates/common/build-info",
    "crates/common/bytes",
    "crates/common/entity-foundation",
    "crates/common/host-info",
    "crates/common/identified-vec-of",
    "crates/common/metadata",
    "crates/common/network",
    "crates/common/numeric",
    "crates/common/short-string",

    # === CORE ===
    "crates/core/assert-json",
    "crates/core/collections",
    "crates/core/error",
    "crates/core/has-sample-values",
    "crates/core/misc",
    "crates/core/time-utils",
    "crates/core/utils",

    # === CRYPTO ===
    "crates/crypto/cap26-models",
    "crates/crypto/addresses",
    "crates/crypto/ecc",
    "crates/crypto/encryption",
    "crates/crypto/hash",
    "crates/crypto/hd",

    # === FACTORS ===
    "crates/factors/factors",
    "crates/factors/instances-provider",
    "crates/factors/keys-collector",
    "crates/factors/next-derivation-index-ephemeral",
    "crates/factors/supporting-types",

    # === GATEWAY ===
    "crates/gateway/client-and-api",
    "crates/gateway/models",

    # === PROFILE ===
    "crates/profile/logic/logic_SPLIT_ME",
    "crates/profile/models/account-for-display",
    "crates/profile/models/account-or-persona",
    "crates/profile/models/account",
    "crates/profile/models/app-preferences",
    "crates/profile/models/base-entity",
    "crates/profile/models/gateway",
    "crates/profile/models/persona-data",
    "crates/profile/models/persona",
    "crates/profile/models/profile_SPLIT_ME",
    "crates/profile/models/security-structures",
    "crates/profile/models/supporting-types",
    "crates/profile/traits/entity-by-address",

    # === SARGON - SPLIT ME ===
    "crates/sargon_SPLIT_ME",

    # === SYSTEM ===
    "crates/system/clients/clients",
    "crates/system/clients/http",
    "crates/system/drivers",
    "crates/system/sub-systems",
    "crates/system/profile-state-holder",
    "crates/system/interactors",
    "crates/system/os/accounts",
    "crates/system/os/factors",
    "crates/system/os/os",
    "crates/system/os/security-center",
    "crates/system/os/signing",
    "crates/system/os/transaction",

    # === TRANSACTION ===
    "crates/transaction/foundation",
    "crates/transaction/manifests",
    "crates/transaction/models",

    # === UNIFFI ===
    "crates/uniffi/uniffi_SPLIT_ME",
    "crates/uniffi/conversion-macros",
]

default-members = [
    # === FOR APP ===
    "crates/app/home-cards",
    "crates/app/radix-connect",
    "crates/app/radix-connect-models",
    "crates/app/security-center",
    "crates/app/signing",
    "crates/app/signing-traits",
    "crates/app/key-derivation-traits",

    # === COMMON ===
    "crates/common/bytes",
    "crates/common/build-info",
    "crates/common/entity-foundation",
    "crates/common/host-info",
    "crates/common/identified-vec-of",
    "crates/common/metadata",
    "crates/common/network",
    "crates/common/numeric",
    "crates/common/short-string",

    # === CORE ===
    "crates/core/assert-json",
    "crates/core/collections",
    "crates/core/error",
    "crates/core/has-sample-values",
    "crates/core/misc",
    "crates/core/time-utils",
    "crates/core/utils",

    # === CRYPTO ===
    "crates/crypto/cap26-models",
    "crates/crypto/addresses",
    "crates/crypto/ecc",
    "crates/crypto/encryption",
    "crates/crypto/hash",
    "crates/crypto/hd",

    # === FACTORS ===
    "crates/factors/factors",
    "crates/factors/instances-provider",
    "crates/factors/keys-collector",
    "crates/factors/next-derivation-index-ephemeral",
    "crates/factors/supporting-types",

    # === GATEWAY ===
    "crates/gateway/client-and-api",
    "crates/gateway/models",

    # === PROFILE ===
    "crates/profile/logic/logic_SPLIT_ME",
    "crates/profile/models/account-for-display",
    "crates/profile/models/account-or-persona",
    "crates/profile/models/account",
    "crates/profile/models/app-preferences",
    "crates/profile/models/base-entity",
    "crates/profile/models/gateway",
    "crates/profile/models/persona-data",
    "crates/profile/models/persona",
    "crates/profile/models/profile_SPLIT_ME",
    "crates/profile/models/security-structures",
    "crates/profile/models/supporting-types",
    "crates/profile/traits/entity-by-address",

    # === SARGON - SPLIT ME ===
    "crates/sargon_SPLIT_ME",

    # === SYSTEM ===
    "crates/system/clients/clients",
    "crates/system/clients/http",
    "crates/system/drivers",
    "crates/system/sub-systems",
    "crates/system/profile-state-holder",
    "crates/system/interactors",
    "crates/system/os/accounts",
    "crates/system/os/factors",
    "crates/system/os/os",
    "crates/system/os/security-center",
    "crates/system/os/signing",
    "crates/system/os/transaction",

    # === TRANSACTION ===
    "crates/transaction/foundation",
    "crates/transaction/manifests",
    "crates/transaction/models",

    # === UNIFFI ===
    # Uniffi is omitted for maximum compilation speed
    # you can `cargo check --workspace` to check it.
    # or cargo test --workspace to test it.
]

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]

# ===== RADIX DEPENDENCIES ========
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0", features = [
    "serde",
    "secp256k1_sign_and_validate",
] }
radix-common-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine-toolkit = { git = "https://github.com/radixdlt/radix-engine-toolkit", rev = "2ab5b35a6cb96c9faeb98ed8df67b870336e6873" }
radix-engine-toolkit-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0", features = [
    "serde",
] }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }

# ===== EXTERNAL DEPENDENCIES ========

# actix-rt = "3.3.0"
actix-rt = { git = "https://github.com/actix/actix-net", rev = "57fd6ea8098d1f2d281c305fc331216c4fe1992e" }

# aes-gcm = "10.3"
aes-gcm = { git = "https://github.com/RustCrypto/AEADs", rev = "7e82b01cd4901f6a35b5153536f11b87f5e4e622", default-features = false, features = [
    "aes",
    "alloc",
    "getrandom",
    "zeroize",
] }

arraystring = { git = "https://github.com/paulocsanz/arraystring", rev = "ebd7d8ba94fa0d5068fe048d5445f6b1af56035d", features = [
    "serde-traits",
] }

async-std = "1.13.0"

async-trait = { git = "https://github.com/dtolnay/async-trait", rev = "1eb21ed8bd87029bf4dcbea41ff309f2b2220c43" }

# assert-json-diff = "2.0.2"
assert-json-diff = { git = "https://github.com/davidpdrsn/assert-json-diff/", rev = "bca0d2c590808274298d939e0533da79cd09076d" }

base64 = { git = "https://github.com/marshallpierce/rust-base64.git", rev = "e14400697453bcc85997119b874bc03d9601d0af" }

# bip39 = "2.0.0"
bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", rev = "a30760beac21d595b2bda376df4f4e6bf029bcc5", features = [
    "serde",
    "zeroize",
    "french",
] }

# camino = "1.0.8"
camino = { git = "https://github.com/camino-rs/camino/", rev = "afa51b1b4c684b7e6698a6717ccda3affd0abd42" }

# cargo_toml = "0.15.3"
cargo_toml = { git = "https://gitlab.com/lib.rs/cargo_toml", rev = "e498c94fc42a660c1ca1a28999ce1d757cfe77fe" }

# clap = "4.5.1"
clap = { git = "https://github.com/clap-rs/clap/", rev = "8a7a13a5618cfdc4ff328624a5266e7b4d88649a", default-features = false, features = [
    "std",
    "derive",
] }

# derive_more = "1.0.0"
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "d7f5b9e94d024790682f6fc4dcca13941cce64c8", features = [
    "add",
    "as_ref",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "from",
    "from_str",
    "mul",
] }

# enum-as-inner = "0.6.0"
enum-as-inner = { git = "https://github.com/bluejekyll/enum-as-inner/", rev = "c15f6e5c4f98ec865e181ae1fff9fc13a1a2e4e2" }

# enum-iterator = "1.4.1"
enum-iterator = { git = "https://github.com/stephaneyfx/enum-iterator/", rev = "9d472a1237cfd03b1c7657fdcba74c8070bfb4ea" }

# delegate = "0.12.0"
delegate = { git = "https://github.com/Kobzol/rust-delegate/", rev = "ac852be64f3e4b5f9b58be910d09921488d2845d" }

futures = "0.3.31"

# hex = "0.4.3"
hex = { git = "https://github.com/KokaKiwi/rust-hex/", rev = "b2b4370b5bf021b98ee7adc92233e8de3f2de792" }

# hkdf = "0.12.4"
hkdf = { git = "https://github.com/RustCrypto/KDFs/", rev = "1ac16e8b9d4ee7a67613c9396c6cc1327652eaba" }

indexmap = { version = "2.2.5", default-features = false }

# SLIP10 implementation
# iota-crypto = "0.23.2"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", rev = "8c13125541e762206e2dc57b8bfde89c7f6ce8e3", features = [
    "slip10",
    "ed25519",
    "secp256k1",
    "x25519",
] }

# iso8601-timestamp = "0.2.16"
iso8601-timestamp = { git = "https://github.com/Lantern-chat/iso8601-timestamp/", rev = "e5a3f2a5911759bc6b0d8100b032a6b4dd6e12c1", features = [
    "serde",
    "std",
] }

# itertools = "0.12.0"
itertools = { git = "https://github.com/rust-itertools/itertools/", rev = "98ecabb47d7147dae06fc3fa400ec758947194f3" }

# Transitive dependency of iota_crypto - used to construct PubKey from uncompressed bytes.
# k256 = "0.13.3"
k256 = { git = "https://github.com/RustCrypto/elliptic-curves", rev = "e158ce5cf0e9acee2fd76aff2a628334f5c771e5" }

log = "0.4.20"

# once_cell = "1.19.0"
once_cell = { git = "https://github.com/matklad/once_cell/", rev = "c48d3c2c01de926228aea2ac1d03672b4ce160c1" }

# paste = "1.0.14"
paste = { git = "https://github.com/dtolnay/paste", rev = "1e0cc1025af5388397c67fa4389ad7ad24814df8" }

# preinterpret = "0.2.0"
preinterpret = { git = "https://github.com/dhedey/preinterpret", rev = "6754b92bdead0ddd6f69fbee7d782180d6351605" }

# pretty_assertions = "1.4.0"
pretty_assertions = { git = "https://github.com/rust-pretty-assertions/rust-pretty-assertions", rev = "3f1ebc0cac5f88e875f036bf16636e15fa935c8d" }

# pretty_env_logger = "0.5.0"
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger/", rev = "0e238400e18649415dc710c025e99c009a1bb744" }

# rand = "0.8.5"
rand = { git = "https://github.com/rust-random/rand/", rev = "937320cbfeebd4352a23086d9c6e68f067f74644" }

# regex = "1.9.3"
regex = { git = "https://github.com/rust-lang/regex/", rev = "72f889ef3cca59ebac6a026f3646e8d92f056d88" }

# reqwest = "0.12.3"
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "0720159f6369f54e045a1fd315e0f24b7a0b4a39", default-features = false, features = [
    "native-tls-vendored",
] }


# serde_with = "3.4.0"
serde_with = { git = "https://github.com/jonasbb/serde_with/", rev = "1e8e4e75398c6a9de29386473ae7c3157be031c2" }

serde = { version = "1.0.193", features = ["derive", "rc", "std"] }

# serde_json = "1.0.108"
serde_json = { git = "https://github.com/serde-rs/json/", rev = "4bc1eaa03a6160593575bc9bc60c94dba4cab1e3", features = [
    "preserve_order",
] }

# serde_repr = "0.1.17"
serde_repr = { git = "https://github.com/dtolnay/serde-repr/", rev = "94cce18a51bc169869f2cdcea6549b3ed81b3b2e" }

# strum = "0.26.1"
strum = { git = "https://github.com/Peternator7/strum/", rev = "f746c3699acf150112e26c00e6c8ca666d8d068d", features = [
    "derive",
] }

# thiserror = "1.0.50"
thiserror = { git = "https://github.com/dtolnay/thiserror/", rev = "a7d220d7915fb888413aa7978efd70f7006bda9d" }

url = { version = "2.5.0", features = ["serde"] }

# uniffi = "0.28.3"
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "9127d4d9cfb8ff8372e70f2e4e0eb36bc06f146d", features = [
    "cli",
] }

# uuid = "1.6.1"
uuid = { git = "https://github.com/uuid-rs/uuid/", rev = "c8891073248ddc7faa8c53ac9ceb629a341c7b9b", features = [
    "v4",
    "serde",
] }

# zeroize = "1.7.0"
zeroize = { git = "https://github.com/RustCrypto/utils", rev = "df6d2f48a5e8afe8eef04ba32e2af55bacb41375", features = [
    "zeroize_derive",
    "derive",
] }
