[package]
name = "hiearchal_deterministic"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
wallet_kit_test_utils = { path = "../wallet_kit_test_utils" }
