[package]
name = "hierarchical_deterministic"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
slip10 = "0.4.3"
wallet_kit_common = { path = "../wallet_kit_common" }
thiserror = "1.0.50"
serde_repr = "0.1.17"
strum = { version = "0.25.0", features = ["derive"] }
itertools = { version = "0.12.0" }
bip39 = { version = "2.0.0", features = ["serde"] }
nutype = { version = "0.4.0", features = ["serde"] }
memoize = "0.4.1"
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
    "serde",
] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
    "serde",
] }
bip32 = "0.5.1" # slip10 crate does not support `secp256k1`.
hex = "0.4.3"
