[package]
name = "hd"
version = "0.1.0"
edition = "2021"

[features]
placeholder = []

[dependencies]
wallet_kit_common = { path = "../wallet_kit_common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
iso8601-timestamp = { workspace = true }
uuid = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-toolkit-json = { workspace = true }
enum-iterator = { workspace = true }
hex = { workspace = true }
transaction = { workspace = true }
bip32 = { workspace = true }
itertools = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
enum-as-inner = { workspace = true }
identified_vec = { workspace = true }
nutype = { workspace = true }
derive-getters = { workspace = true }
slip10 = "0.4.3"
memoize = "0.4.1"
bip39 = { version = "2.0.0", features = ["serde"] }

[dev-dependencies]
wallet_kit_common = { path = "../wallet_kit_common", features = [
    "placeholder",
] }
