[package]
name = "profile"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.uniffi.testing]
external-crates = ["wallet_kit_common"]

[features]
placeholder = []

[dependencies]
hd = { path = "../hierarchical_deterministic" }
wallet_kit_common = { path = "../wallet_kit_common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
iso8601-timestamp = { workspace = true }
uuid = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-toolkit-json = { workspace = true }
radix-engine-toolkit = { workspace = true }
enum-iterator = { workspace = true }
hex = { workspace = true }
transaction = { workspace = true }
bip32 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
enum-as-inner = { workspace = true }
identified_vec = { workspace = true }
nutype = { workspace = true }
derive-getters = { workspace = true }
url = { version = "2.5.0", features = ["serde"] }
schemars = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
wallet_kit_common = { path = "../wallet_kit_common", features = [
    "placeholder",
] }
hd = { path = "../hierarchical_deterministic", features = ["placeholder"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
