[package]
name = "profile"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
placeholder = []

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
iso8601-timestamp = { workspace = true }
uuid = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-toolkit-json = { workspace = true }
radix-engine-toolkit = { workspace = true }
radix-engine-interface = { workspace = true }
enum-iterator = { workspace = true }
hex = { workspace = true }
transaction = { workspace = true }
bip32 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
enum-as-inner = { workspace = true }
identified_vec = { workspace = true }
schemars = { workspace = true }
uniffi = { workspace = true, features = ["cli"] }
url = { git = "https://github.com/sajjon/rust-url", branch = "uniffi", features = [
    "serde",
    "uniffi",
] }
pretty_assertions = "1.4.0"
slip10 = "0.4.3"
memoize = "0.4.1"
itertools = { version = "0.12.0" }
bip39 = { version = "2.0.0", features = ["serde"] }
time-util = { version = "0.3.4", features = ["chrono"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
