[package]
name = "wallet_kit_common"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
serde_repr = "0.1.17"
strum = { version = "0.25.0", features = ["derive"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
    "serde",
] }
enum-iterator = "1.4.1"
hex = "0.4.3"
